--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "firebase-admin": "^10.0.1",
     "mongoose": "^6.1.4",
     "stripe": "^8.195.0"
   }
